--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 html {
   background-color: #fffefa;
+  margin-bottom: 25px;
 }
 
 body {
@@ -37,6 +38,16 @@ ul li {
   padding: 5px;
 }
 
+@media all and (min-width: 1300px) {
+  ul {
+    margin-top: 200px;
+  }
+  ul li:not(.nav) {
+    display: inline;
+    margin-left: 25px;
+  }
+}
+
 ul a {
   text-decoration: none;
   color: teal;
@@ -65,6 +76,10 @@ ul a:hover {
   content: "";
   clear: both;
   display: table;
+}
+
+.w3-button {
+  margin-top: 25px;
 }
 
 /*Navigation*/
